fixed issue with positioning of elements (they would overlap)

--- a/bibsonomy-webapp/src/main/webapp/resources/css/bootstrap-style.less
+++ b/bibsonomy-webapp/src/main/webapp/resources/css/bootstrap-style.less
@@ -990,3 +990,8 @@ fieldset {
 .container.footer .legal-notices a {
 	text-decoration: underline;
 }
+
+.btn-stripped {
+	margin-left: 0!important;
+	border-left: none;
+}
